--- a/stream-pivot/pom.xml
+++ b/stream-pivot/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>stream-pivot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <parent>
-        <groupId>com.xiaoju</groupId>
-        <artifactId>base-pom</artifactId>
-        <version>0.0.1</version>
-    </parent>
+    <!--<parent>-->
+        <!--<groupId>com.xiaoju</groupId>-->
+        <!--<artifactId>base-pom</artifactId>-->
+        <!--<version>0.0.1</version>-->
+    <!--</parent>-->
 
     <properties>
         <kafka.version>2.3.0</kafka.version>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.9.0</version>
+            <version>3.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -105,6 +105,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+
+
         </plugins>
+
     </build>
 </project>
